Make installation much easier + add workaround.